Fix dashboard mempool info mobile alignment.

--- a/frontend/src/app/dashboard/dashboard.component.scss
+++ b/frontend/src/app/dashboard/dashboard.component.scss
@@ -66,10 +66,8 @@
     width: 124px;
     margin: 0px auto 20px;
     display: inline-block;
-    @media (min-width: 485px) {
+    @media (min-width: 400px) {
       width: 50%;
-      margin: 0px auto 20px;
-      display: inline-block;
     }
     &:last-child {
       margin: 0px auto 0px;
